# cr3_converter

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
LibRaw-cmake/: CMakeLists.txt
include/converter/: FileData.hpp  ImageData.hpp  Manifest.hpp
src/: FileData.cpp  ImageData.cpp  ImageData.h  Manifest.cpp  main.cpp
test_files/raw/01-12-2023/: IMG_0045.CR3.xmp
